<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#C46D36">

    <Button
        android:id="@+id/addMeals"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:text="@string/add_meals_to_db"
        android:layout_marginTop="110dp"
        android:textColor="#37474F"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ingredientSearch"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:background="@drawable/button"
        android:text="@string/ingredient_meal"
        android:textColor="#37474F"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/addMeals" />

    <Button
        android:id="@+id/mealSearch"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:background="@drawable/button"
        android:text="@string/meal_search"
        android:textColor="#37474F"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/ingredientSearch" />

    <Button
        android:id="@+id/web_search"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:text="@string/web_search"
        android:layout_marginTop="60dp"
        android:textColor="#37474F"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/mealSearch" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:src="@drawable/mealser"
        />

</androidx.constraintlayout.widget.ConstraintLayout>