<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#C46D36">

    <Button
        android:id="@+id/save"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:text="@string/save_meals_to_database"
        android:textColor="#37474F"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/retrieve"
        android:layout_marginTop="60dp"/>
    <Button
        android:id="@+id/retrieve"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/retrieve_meals"
        android:textColor="#37474F"
        android:background="@drawable/button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/getIngredient"
        android:layout_marginTop="15dp"/>

    <ScrollView
        android:id="@+id/textscroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:background="@color/rose"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/save"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/meal_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/meal_list"
            android:textColor="@color/black"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </ScrollView>

    <EditText
        android:id="@+id/getIngredient"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_margin="20dp"
        android:inputType="textPersonName"
        android:background="@drawable/text_input"
        android:textColorHint="@android:color/darker_gray"
        android:padding="10dp"
        android:minHeight="48dp"
        android:hint="@string/enter"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>